@@ -2,9 +2,11 @@ package dev.logicojp.reviewer.orchestrator;
 
 import dev.logicojp.reviewer.agent.AgentConfig;
 import dev.logicojp.reviewer.agent.ReviewAgent;
+import dev.logicojp.reviewer.config.ExecutionConfig;
 import dev.logicojp.reviewer.config.GithubMcpConfig;
 import dev.logicojp.reviewer.config.OrchestratorConfig;
 import dev.logicojp.reviewer.report.ReviewResult;
+import dev.logicojp.reviewer.target.ReviewTarget;
 import com.github.copilot.sdk.CopilotClient;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -22,50 +24,59 @@ public class ReviewOrchestrator {
     private final CopilotClient client;
     private final String githubToken;
     private final GithubMcpConfig githubMcpConfig;
-    private final OrchestratorConfig orchestratorConfig;
+    private final ExecutionConfig executionConfig;
     private final ExecutorService executorService;
+    private final String customInstruction;
     
     public ReviewOrchestrator(CopilotClient client,
                               String githubToken,
                               GithubMcpConfig githubMcpConfig,
-                              OrchestratorConfig orchestratorConfig) {
-        this(client, githubToken, githubMcpConfig, orchestratorConfig,
-             orchestratorConfig.getDefaultParallelism());
+                              ExecutionConfig executionConfig) {
+        this(client, githubToken, githubMcpConfig, executionConfig, null);
     }
     
     public ReviewOrchestrator(CopilotClient client,
                               String githubToken,
                               GithubMcpConfig githubMcpConfig,
-                              OrchestratorConfig orchestratorConfig,
-                              int parallelism) {
+                              ExecutionConfig executionConfig,
+                              String customInstruction) {
         this.client = client;
         this.githubToken = githubToken;
         this.githubMcpConfig = githubMcpConfig;
-        this.orchestratorConfig = orchestratorConfig;
-        this.executorService = Executors.newFixedThreadPool(parallelism);
+        this.executionConfig = executionConfig;
+        // Java 21+: Use virtual threads for better scalability with I/O-bound tasks
+        this.executorService = Executors.newVirtualThreadPerTaskExecutor();
+        this.customInstruction = customInstruction;
+        
+        if (customInstruction != null && !customInstruction.isBlank()) {
+            logger.info("Custom instruction loaded ({} characters)", customInstruction.length());
+        }
     }
     
     /**
      * Executes reviews for all provided agents in parallel.
      * @param agents Map of agent name to AgentConfig
-     * @param repository The repository to review
+     * @param target The target to review (GitHub repository or local directory)
      * @return List of ReviewResults from all agents
      */
-    public List<ReviewResult> executeReviews(Map<String, AgentConfig> agents, String repository) {
-        logger.info("Starting parallel review for {} agents on repository: {}", agents.size(), repository);
+    public List<ReviewResult> executeReviews(Map<String, AgentConfig> agents, ReviewTarget target) {
+        logger.info("Starting parallel review for {} agents on target: {}", 
+            agents.size(), target.getDisplayName());
         
         List<CompletableFuture<ReviewResult>> futures = new ArrayList<>();
+        long timeoutMinutes = executionConfig.orchestratorTimeoutMinutes();
         
         for (AgentConfig config : agents.values()) {
-            ReviewAgent agent = new ReviewAgent(config, client, githubToken, githubMcpConfig);
-            CompletableFuture<ReviewResult> future = agent.review(repository)
-                .orTimeout(orchestratorConfig.getTimeoutMinutes(), TimeUnit.MINUTES)
+            ReviewAgent agent = new ReviewAgent(config, client, githubToken, githubMcpConfig,
+                executionConfig.agentTimeoutMinutes(), customInstruction);
+            CompletableFuture<ReviewResult> future = agent.review(target, executorService)
+                .orTimeout(timeoutMinutes, TimeUnit.MINUTES)
                 .exceptionally(ex -> {
                     logger.error("Agent {} failed with timeout or error: {}", 
                         config.getName(), ex.getMessage());
                     return ReviewResult.builder()
                         .agentConfig(config)
-                        .repository(repository)
+                        .repository(target.getDisplayName())
                         .success(false)
                         .errorMessage("Review timed out or failed: " + ex.getMessage())
                         .build();
@@ -79,7 +90,7 @@ public class ReviewOrchestrator {
         );
         
         try {
-            allFutures.get(orchestratorConfig.getTimeoutMinutes() + 1, TimeUnit.MINUTES);
+            allFutures.get(timeoutMinutes + 1, TimeUnit.MINUTES);
         } catch (InterruptedException | ExecutionException | TimeoutException e) {
             logger.error("Error waiting for reviews to complete: {}", e.getMessage());
         }
@@ -114,7 +125,8 @@ public class ReviewOrchestrator {
             if (!executorService.awaitTermination(60, TimeUnit.SECONDS)) {
                 executorService.shutdownNow();
             }
-        } catch (InterruptedException e) {
+        } catch (InterruptedException _) {
+            // Java 22+: Unnamed variable - exception not used
             executorService.shutdownNow();
             Thread.currentThread().interrupt();
         }
